Added ForceVec.cpp for example of ForceVec of SVA

--- a/basis-test/CMakeLists.txt
+++ b/basis-test/CMakeLists.txt
@@ -147,6 +147,27 @@ include_directories(
 add_executable(motionvec src/SpaceVecAlg/MotionVec.cpp)
 target_link_libraries(motionvec ${catkin_LIBRARIES})
 
+add_executable(forcevec src/SpaceVecAlg/ForceVec.cpp)
+target_link_libraries(forcevec ${catkin_LIBRARIES})
+
+#############
+## Install ##
+#############
+
+# all install targets should use catkin DESTINATION variables
+# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+
+## Mark executable scripts (Python etc.) for installation
+## in contrast to setup.py, you can choose the destination
+# install(PROGRAMS
+#   scripts/my_python_script
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+## Mark executables and/or libraries for installation
+# install(TARGETS basis-test basis-test_node
+#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #############
 ## Install ##
 #############
