--- a/basis-test/CMakeLists.txt
+++ b/basis-test/CMakeLists.txt
@@ -161,6 +161,12 @@ target_link_libraries(utilities ${catkin_LIBRARIES})
 
 add_executable(body src/RBDyn/Body.cpp)
 target_link_libraries(body ${catkin_LIBRARIES})
+
+add_executable(joint src/RBDyn/Joint.cpp)
+target_link_libraries(joint ${catkin_LIBRARIES})
+
+add_executable(multibodygraph src/RBDyn/MultiBodyGraph.cpp)
+target_link_libraries(multibodygraph ${catkin_LIBRARIES} /usr/local/lib/libRBDyn.so)
 #############
 ## Install ##
 #############
