RBDyn, apt-get install is available.
CMakeLists.txt was changed a little.
Variable can be used?

--- a/basis-test/CMakeLists.txt
+++ b/basis-test/CMakeLists.txt
@@ -166,7 +166,8 @@ add_executable(joint src/RBDyn/Joint.cpp)
 target_link_libraries(joint ${catkin_LIBRARIES})
 
 add_executable(multibodygraph src/RBDyn/MultiBodyGraph.cpp)
-target_link_libraries(multibodygraph ${catkin_LIBRARIES} /usr/local/lib/libRBDyn.so)
+#target_link_libraries(multibodygraph ${catkin_LIBRARIES} /usr/local/lib/libRBDyn.so)
+target_link_libraries(multibodygraph ${catkin_LIBRARIES} /usr/lib/libRBDyn.so)
 #############
 ## Install ##
 #############
