--- a/posture-generator/CMakeLists.txt
+++ b/posture-generator/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   urdf
+  sensor_msgs
 )
 
 ## System dependencies are found with CMake's conventions
