link miss is fixed, but optimization is bad

--- a/posture_optimization/CMakeLists.txt
+++ b/posture_optimization/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(posture_optimization)
+set(CMAKE_BUILD_TYPE Debug)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -103,10 +104,10 @@ find_package(Boost REQUIRED COMPONENTS system)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+ INCLUDE_DIRS include
 #  LIBRARIES posture_optimization
 #  CATKIN_DEPENDS roscpp rospy std_msgs
-DEPENDS Eigen3 roboptim-core
+ DEPENDS Eigen3 
 )
 
 ###########
@@ -137,7 +138,7 @@ add_executable(sample1 src/sample1.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(sample1 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} roboptim-core roboptim-trajectory)
+add_dependencies(sample1 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(sample1
@@ -146,6 +147,7 @@ target_link_libraries(sample1
   RBDynUrdf
   roboptim-core
   roboptim-trajectory
+  ltdl
 )
 
 #############
