--- a/posture_optimization/CMakeLists.txt
+++ b/posture_optimization/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   sensor_msgs
   visualization_msgs
+  urdf
 )
 find_package(Eigen3 REQUIRED)
 
