--- a/posture_optimization/package.xml
+++ b/posture_optimization/package.xml
@@ -45,12 +45,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>urdf</build_depend>
   <build_depend>eigen3</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>urdf</run_depend>
   <run_depend>eigen3</run_depend>
 
 
