--- a/posture_optimization/CMakeLists.txt
+++ b/posture_optimization/CMakeLists.txt
@@ -105,10 +105,10 @@ find_package(Boost REQUIRED COMPONENTS system)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- INCLUDE_DIRS include
+#  INCLUDE_DIRS include
 #  LIBRARIES posture_optimization
 #  CATKIN_DEPENDS roscpp rospy std_msgs
- DEPENDS Eigen3 
+DEPENDS EIGEN3
 )
 
 ###########
@@ -120,8 +120,7 @@ catkin_package(
 include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
-  #EIGEN3_INCLUDE_DIRS
-  /usr/include/eigen3
+  ${EIGEN3_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
