wrote InvDyn.cpp and added ForDyn.cpp

--- a/basis-test/CMakeLists.txt
+++ b/basis-test/CMakeLists.txt
@@ -176,6 +176,9 @@ target_link_libraries(jacobian ${catkin_LIBRARIES} RBDyn mc_rbdyn_urdf)
 add_executable(invdyn src/RBDyn/InvDyn.cpp)
 target_link_libraries(invdyn ${catkin_LIBRARIES} RBDyn mc_rbdyn_urdf)
 
+add_executable(fordyn src/RBDyn/ForDyn.cpp)
+target_link_libraries(fordyn ${catkin_LIBRARIES} RBDyn mc_rbdyn_urdf)
+
 add_executable(objects src/sch-core/objects.cpp)
 target_link_libraries(objects ${catkin_LIBRARIES} sch-core)
 #############
