--- a/basis-test/package.xml
+++ b/basis-test/package.xml
@@ -45,12 +45,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>tf2_ros</build_depend>
   <build_depend>cmake_modules</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>tf2_ros</run_depend>
   <run_depend>cmake_modules</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
