--- a/motion_optimization/package.xml
+++ b/motion_optimization/package.xml
@@ -55,6 +55,8 @@
   <depend>sensor_msgs</depend>
   <depend>visualization_msgs</depend>
   <depend>urdf</depend>
+  <depend>eigen_conversions</depend>
+  <depend>tf2_ros</depend>
   <depend>eigen3</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
