--- a/motion_optimization/CMakeLists.txt
+++ b/motion_optimization/CMakeLists.txt
@@ -141,6 +141,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(sample1 src/sample1.cpp)
+add_executable(sample2 src/sample2.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -151,9 +152,17 @@ add_executable(sample1 src/sample1.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(sample1 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(sample2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(sample1
+  ${catkin_LIBRARIES}
+  mc_rbdyn_urdf
+  RBDyn
+  Tasks
+  sch-core
+)
+target_link_libraries(sample2
   ${catkin_LIBRARIES}
   mc_rbdyn_urdf
   RBDyn
