--- a/motion_optimization/CMakeLists.txt
+++ b/motion_optimization/CMakeLists.txt
@@ -142,6 +142,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(sample1 src/sample1.cpp)
 add_executable(sample2 src/sample2.cpp)
+add_executable(sample3 src/sample3.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -153,6 +154,7 @@ add_executable(sample2 src/sample2.cpp)
 ## same as for the library above
 add_dependencies(sample1 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(sample2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(sample3 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(sample1
@@ -169,7 +171,13 @@ target_link_libraries(sample2
   Tasks
   sch-core
 )
-
+target_link_libraries(sample3
+  ${catkin_LIBRARIES}
+  mc_rbdyn_urdf
+  RBDyn
+  Tasks
+  sch-core
+)
 
 #############
 ## Install ##
