--- a/ik_methods/package.xml
+++ b/ik_methods/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>posture-generator</name>
+  <name>ik_methods</name>
   <version>0.0.0</version>
-  <description>The posture-generator package</description>
+  <description>The ik_methods package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/posture-generator</url> -->
+  <!-- <url type="website">http://wiki.ros.org/ik_methods</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
